hphp/test/zend/good/Zend/tests/dynamic_call_002.php.expectf

Fatal error: Function name must be a string in %s/dynamic_call_002.php on line 5
